--- a/head.tex
+++ b/head.tex
@@ -1,5 +1,5 @@
 \begin{tabbing}
-\hspace{11cm} \= Студент: \= Максим Васильев \\
+\hspace{11cm} \= Студент: \= Максим Васильев (285800)\\
   \> Группа: \>  M4140 \\
   \> Дата: \> \today
 \end{tabbing}
