sln: add sln to 2

--- a/hw1.tex
+++ b/hw1.tex
@@ -12,10 +12,40 @@
     \begin{enumerate}
       \item
         Если в определении $\O$ опустить условие про $N$ (т.е. оставить
-        просто $\forall n$), будет ли полученное определение эквивалентно
-        исходному?
-      \item
-        Тот же вопрос про $o$.
+        просто $\forall n$), будет ли полученное определение эквивалентно исходному?
+
+      \begin{proof}
+        Исходное определение:
+        \begin{equation}
+          f(n) = \O(g(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad f(n) \leq C \cdot g(n)
+        \end{equation}
+        Рассмотрим случай, когда отображение $\N \to \N$. Если опустить условие про $N$, то определения останутся эквивалентными, потому что в конечном итоге мы будем иметь неравенство:
+        \begin{equation}
+          f(n) \leq C \cdot g(n),
+        \end{equation}
+        которое просто сводится к
+        \begin{equation}
+          C_1 \leq C \cdot C_2,
+        \end{equation}
+        где $C_1, C_2 \in \N$. Очевидно, что мы всегда можем подобрать такую $C$, чтобы неравенство выполнялось, например:
+        \begin{equation}
+          C = \dfrac{C_1}{C_2} + 1.
+        \end{equation}
+        Если отображение $\N \to \mathbb{R}_{>0}$, то:
+        \begin{equation}
+          C_1' \leq C \cdot C_2',
+        \end{equation}
+        где $C_1', C_2' \in \mathbb{R}_{>0}$. Если $C_1, C_2$ -- бесконечно малые (или бесконечно большие), $C$ можно легко подобрать. Если $C_1$ -- бесконечно большая, а $C_2$ -- бесконечно малая, то $C$ можно взять как бесконечно большую более высокого порядка по сравнению с $\frac{C_1}{C_2}$.
+
+        Так как $C$ всегда можно найти, то определение без конкретного $N$ оказывается эквивалентным исходному.
+      \end{proof}
+      \item Тот же вопрос про $o$.
+      
+      В данном случае неравенства будут строгими, но, делая те же самые рассуждения, которые были сделаны в пункте (a), можно понять, что $C$ тоже всегда удастся подобрать.
+      \begin{equation}
+        f(n) = o(g(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad f(n) < C \cdot g(n)
+      \end{equation}
+      Определения будут эквивалентными.
     \end{enumerate}
 
   \item
