--- a/hw1.tex
+++ b/hw1.tex
@@ -7,6 +7,32 @@
 		\item $\exists C,  0 < C < \infty : \lim\limits_{n \to \infty} \frac{f(n)}{g(n)} = C$
 	\end{itemize}
 
+  \begin{proof}
+    По определению из лекции:
+    \begin{eqnarray}
+      f(n) = \Theta(g(n)), \text{ если } f(n) = \O(g(n)) \text{ и } g(n) = \O(f(n)), \\
+      f(n) = \O(g(n)), \text{ если } \exists C > 0, N \in \N: \forall n \geq N \quad f(n) \leq C \cdot g(n), \\
+      g(n) = \O(f(n)), \text{ если } \exists C > 0, N \in \N: \forall n \geq N \quad g(n) \leq C \cdot f(n).
+    \end{eqnarray}
+    Таким образом, мы имеем систему:
+    \begin{equation}
+      \begin{cases}
+        f(n) \leq C_1 \cdot g(n), \\
+        g(n) \leq C_2 \cdot f(n),
+      \end{cases}
+    \end{equation}
+    где первое уравнение выполняется с некоторого $n_1$, а второе с некоторого $n_2$. Так как $f$ и $g$ отображают в положительные числа, то можем поделить без смены знака неравенства:
+    \begin{equation}
+      \begin{cases}
+        \dfrac{f(n)}{g(n)} \leq C_1, \\ \qquad\qquad\qquad\qquad\qquad\Rightarrow\\
+        \dfrac{f(n)}{g(n)} \geq C_2,
+      \end{cases}
+    \end{equation}
+    \begin{equation}
+      C_2 \leq \dfrac{f(n)}{g(n)} \leq C_1,
+    \end{equation}
+  \end{proof}
+
   \item
     Дайте ответ для двух случаев $\mathbb{N} \to \mathbb{N}$ и $\mathbb{N} \to \mathbb{R}_{>0}$:
     \begin{enumerate}
@@ -21,6 +47,13 @@
   \item
     Продолжим отношение ``$\preceq$'' на функциях до отношения на классах эквивалентности по отношению эквивалентности ``$\sim$'', введённому на практике. Правда ли, что получится отношение \textit{линейного порядка} (то есть
     $\forall f, g: (f \preceq g) \lor (g \preceq f)$)?
+    \begin{proof}
+      Нет, не правда. Эквивалентность $f \sim g$ означает, что функции $f$ и $g$ асимптотически имеют одинаковую скорость роста. При этом, такое поведение можно гарантировать, если одновременно выполнены два условия: $(f \preceq g)$ и $(g \preceq f)$. В математических терминах это можно записать через пересечение:
+      \begin{equation}
+        \forall f, g: (f \preceq g) \land (g \preceq f)
+      \end{equation}
+      Если бы мы оставили объединение, то мы бы получили положительный ответ (что $f \sim g$), даже если только одно из утверждений ($(f \preceq g)$ или $(g \preceq f)$) было бы верным, ну а это неверно.
+    \end{proof}
 
   \item
     Докажите, или приведите контрпример:
