--- a/hw1.tex
+++ b/hw1.tex
@@ -80,7 +80,7 @@
     \begin{proof}
       Нет, не правда. Эквивалентность $f \sim g$ означает, что функции $f$ и $g$ асимптотически имеют одинаковую скорость роста. При этом, такое поведение можно гарантировать, если одновременно выполнены два условия: $(f \preceq g)$ и $(g \preceq f)$. В математических терминах это можно записать через пересечение:
       \begin{equation}
-        \forall f, g: (f \preceq g) \land (g \preceq f)
+        \forall f, g: (f \preceq g) \land (g \preceq f).
       \end{equation}
       Если бы мы оставили объединение, то мы бы получили положительный ответ (что $f \sim g$), даже если только одно из утверждений ($(f \preceq g)$ или $(g \preceq f)$) было бы верным, ну а это неверно.
     \end{proof}
@@ -89,7 +89,53 @@
     Докажите, или приведите контрпример:
     \begin{enumerate}
       \item $g(n) = o(f(n)) \Rightarrow f(n) + g(n) = \Theta(f(n))$
+      \begin{proof}
+        \begin{equation}
+          g(n) = o(f(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad g(n) < C \cdot f(n).
+        \end{equation}
+        Так как $g(n) = o(f(n))$, можно ограничить сверху:
+        \begin{equation}
+          f(n) + g(n) < f(n) + C \cdot f(n) = (C + 1) \cdot f(n) = \O(f(n)).
+        \end{equation}
+        Ограничим снизу:
+        \begin{equation}
+          f(n) + g(n) > g(n) + \frac{1}{C} \cdot g(n) = (\frac{1}{C} + 1) \cdot g(n) = \O(g(n)).
+        \end{equation}
+        Получается, что сумма $f(n) + g(n)$ в диапазоне:
+        \begin{equation}
+          \O(g(n)) < f(n) + g(n) < \O(f(n)).
+        \end{equation}
+        Можно сделать вывод, что, действительно,
+        \begin{equation}
+          f(n) + g(n) = \Theta(f(n)),
+        \end{equation}
+        т. е. сумма имеет одинаковую скорость роста с доминирующей функцией.
+      \end{proof}
       \item $f(n) = \O(g(n)) \Leftrightarrow f(n) = o(g(n)) \lor f(n) = \Theta(g(n))$
+      \begin{proof}
+        Выпишем определения:
+        \begin{eqnarray}
+          f(n) = \O(g(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad f(n) \leq C \cdot g(n), \\
+          f(n) = o(g(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad f(n) < C \cdot g(n), \\
+          f(n) = \Theta(g(n)) , \quad \text{если } \quad f(n) = \O(g(n)) \quad \text{и} \quad g(n) = \O(f(n)).
+        \end{eqnarray}
+        Утверждение (b) можно прочитать следующим образом: фраза ``функция $f$ растет не быстрее функции $g$'' эквивалента фразе ``функция $f$ или бесконечно малая относительно $g$, или имеет такую же скорость роста, как $g$''. Или в математических терминах:
+        \begin{equation}
+          f \preceq g \Leftrightarrow (f \prec g) \lor (f \sim g).
+        \end{equation}
+        \textit{В одну сторону}: если известно, что функция $f$ растет не быстрее, чем функция $g$, то это означает, что $f$ либо строго меньше $g$, либо равна $g$:
+        \begin{equation}
+          f \preceq g \Rightarrow (f \prec g) \lor (f \sim g).
+        \end{equation}
+        В обратную сторону: если известно, что функция $f$ или строго меньше функции $g$, или равна $g$, то это означает, что не превосходит (меньше либо равна) $g$:
+        \begin{equation}
+          (f \prec g) \lor (f \sim g) \Rightarrow f \preceq g.
+        \end{equation}
+        Так как было проведено доказательство в обе стороны, то можно ввести эквивалентность устверждений:
+        \begin{equation}
+          f \preceq g \Leftrightarrow (f \prec g) \lor (f \sim g).
+        \end{equation}
+      \end{proof}
     \end{enumerate}
 
   \item Заполните табличку и поясните (особенно строчки 4 и 7):
@@ -110,36 +156,7 @@
     $$
     Здесь все буквы, кроме $n$, --- положительные константы.
 
-\subsection*{Дополнительные задачи}
-    
-    \item  
-    Считайте здесь, что функции здесь $\mathbb{N} \to \mathbb{N}$ и что $\forall n : f(n) > 1 \land g(n) > 1$.
-    \begin{enumerate}
-      \item $f(n) = \Omega(f(n \slash 2)$)?
-      \item $f(n) = \O(g(n)) \Rightarrow \log f(n) = \O(\log g(n))$?
-      \item $f(n) = \O(g(n)) \Rightarrow 2^{f(n)} = \O(2^{g(n)})$?
-      \item $f(n) = o(g(n)) \Rightarrow \log f(n) = o(\log g(n))$?
-      \item $f(n) = o(g(n)) \Rightarrow 2^{f(n)} = o(2^{g(n)})$?
-    \end{enumerate}
-    
-	\item
-	Упорядочите функции по скорости роста и обозначьте неравенства между соседями. 
-	Укажите, в каких неравенствах $f = o(g)$, а в каких $f = \Theta(g)$
-	$$
-	\begin{array}{cccccc}
-	\log(\log^* n) & 2^{log^* n} & (\sqrt{n})^{\log n} & n^2 & n! & (\log n)! \\
-	(3 \slash 2)^n & n^3 & \log^2 n & \log n! & 2^{2^n} & n^{1 \slash \log n} \\
-	\ln \ln n & \log^* n & n \cdot 2^n & n^{\log \log n} & \ln n & 1 \\
-	2^{\ln n} & (\log n)^{\log n} & e^n & 4^{\log n} & (n + 1)! & \sqrt{\log n} \\
-	\log^* \log n & 2^{\sqrt{2 \log n}} & n & 2^n & n \log n & 2^{2^{n + 1}}					
-	\end{array}
-	$$
-	Примечание: $\log^*(n) = \left\{
-	\begin{array}{ll}
-	0 & \texttt{ если } n \leq 1;\\
-	1 + \log^*(\log n) & \texttt{ иначе.}
-	\end{array}
-	\right.$
+
 \end{enumerate}
 
 \clearpage
