sln: add more instructions to 2

--- a/hw1.tex
+++ b/hw1.tex
@@ -99,10 +99,16 @@
       \end{proof}
       \item Тот же вопрос про $o$.
       
-      В данном случае неравенства будут строгими, но, делая те же самые рассуждения, которые были сделаны в пункте (a), можно понять, что $C$ тоже всегда удастся подобрать.
       \begin{equation}
         f(n) = o(g(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad f(n) < C \cdot g(n)
       \end{equation}
+      В случае с o, функция $f$ трактуется как бесконечно малая по отношению к функции $g$:
+      \begin{equation}
+        \lim\limits_{n \to \infty} \frac{f(n)}{g(n)} = 0,
+      \end{equation}
+      то есть на бесконечности функция $g$ строго превосходит функцию $f$.
+      В данном случае неравенства будут строгими, но, делая те же самые рассуждения, которые были сделаны в пункте (a), можно понять, что $C$ тоже всегда удастся подобрать.
+      
       Определения будут эквивалентными.
     \end{enumerate}
 
