--- a/hw1.tex
+++ b/hw1.tex
@@ -84,29 +84,51 @@
         просто $\forall n$), будет ли полученное определение эквивалентно исходному?
 
       \begin{proof}
-        Исходное определение:
+        Хотим доказать, что, если $f, g: \N \to \N$, то:
         \begin{equation}
-          f(n) = \O(g(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad f(n) \leq C \cdot g(n)
+          \exists C > 0, N \in \N: \forall n \geq N \quad f(n) \leq C \cdot g(n) \Leftrightarrow \exists C > 0: \forall n \quad f(n) \leq C \cdot g(n).
         \end{equation}
-        Рассмотрим случай, когда отображение $\N \to \N$. Если опустить условие про $N$, то определения останутся эквивалентными, потому что в конечном итоге мы будем иметь неравенство:
-        \begin{equation}
-          f(n) \leq C \cdot g(n),
+        \textit{В одну сторону}:
+        Если мы в первом случае подобрали такие константы $C_0$ и $N_0$, что, начиная с некоторого $n \geq N_0$ неравенство $f(n) \leq C_0 \cdot g(n)$ будет выполняться, то это никак не противоречит тому, что мы можем подобрать такую константу $C_0'$, что неравенство $f(n) \leq C_0' \cdot g(n)$ будет выполняться для всех $n \in \N$ (здесь я очень надеюсь, что в натуральные числа ноль не входит). Как это можно сделать: зная, что $f, g: \in \N$, выбираем $C_0'$ как
+        \begin{equation} \label{eq:c0'}
+          C_0' = \frac{f(n)}{g(n)} + 1.
         \end{equation}
-        которое просто сводится к
-        \begin{equation}
-          C_1 \leq C \cdot C_2,
-        \end{equation}
-        где $C_1, C_2 \in \N$. Очевидно, что мы всегда можем подобрать такую $C$, чтобы неравенство выполнялось, например:
-        \begin{equation}
-          C = \dfrac{C_1}{C_2} + 1.
-        \end{equation}
-        Если отображение $\N \to \mathbb{R}_{>0}$, то:
-        \begin{equation}
-          C_1' \leq C \cdot C_2',
-        \end{equation}
-        где $C_1', C_2' \in \mathbb{R}_{>0}$. Если $C_1, C_2$ -- бесконечно малые (или бесконечно большие), $C$ можно легко подобрать. Если $C_1$ -- бесконечно большая, а $C_2$ -- бесконечно малая, то $C$ можно взять как бесконечно большую более высокого порядка по сравнению с $\frac{C_1}{C_2}$.
 
-        Так как $C$ всегда можно найти, то определение без конкретного $N$ оказывается эквивалентным исходному.
+        \textit{В другую сторону}:
+        Если мы подобрали такую константу $C_0'$, что неравенство $f(n) \leq C_0' \cdot g(n)$ будет выполняться для всех $n \in \N$, то из этого следует, что мы можем подобрать такую константу $C_0$ (например, равную $C_0'$) и $N_0$, что неравенство $f(n) \leq C_0 \cdot g(n)$ будет выполняться с некоторого $n \geq N_0$.
+
+        Теперь рассмотрим случай, когда $f, g: \N \to \mathbb{R}_{>0}$. Здесь нужно понимать, что значения функций могут уходить в 0, поэтому производить деление как в~(\ref{eq:c0'}) опасно. Но опять же, \textit{в одну сторону}: если мы в первом случае подобрали такие константы $C_0$ и $N_0$, что, начиная с некоторого $n \geq N_0$ неравенство $f(n) \leq C_0 \cdot g(n)$ будет выполняться, то это никак не противоречит тому, что мы можем подобрать такую константу $C_0'$, что неравенство $f(n) \leq C_0' \cdot g(n)$ будет выполняться для всех $n \in \N$. Как это можно сделать:
+        \begin{itemize}
+          \item $f(n), g(n)$ -- бесконечно малые
+          \item $f(n)$ -- бесконечно малая, $g(n)$ бесконечно большая, берем $0 < C < + \infty$ 
+          \item $f(n)$ -- бесконечно большая, $g(n)$ бесконечно малая, берем $C$
+          \item $f(n), g(n)$ -- бесконечно большие
+        \end{itemize}
+
+
+
+        % \begin{equation}
+        %   f(n) = \O(g(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad f(n) \leq C \cdot g(n)
+        % \end{equation}
+        % Рассмотрим случай, когда отображение $\N \to \N$. Если опустить условие про $N$, то определения останутся эквивалентными, потому что в конечном итоге мы будем иметь неравенство:
+        % \begin{equation}
+        %   f(n) \leq C \cdot g(n),
+        % \end{equation}
+        % которое просто сводится к
+        % \begin{equation}
+        %   C_1 \leq C \cdot C_2,
+        % \end{equation}
+        % где $C_1, C_2 \in \N$. Очевидно, что мы всегда можем подобрать такую $C$, чтобы неравенство выполнялось, например:
+        % \begin{equation}
+        %   C = \dfrac{C_1}{C_2} + 1.
+        % \end{equation}
+        % Если отображение $\N \to \mathbb{R}_{>0}$, то:
+        % \begin{equation}
+        %   C_1' \leq C \cdot C_2',
+        % \end{equation}
+        % где $C_1', C_2' \in \mathbb{R}_{>0}$. Если $C_1, C_2$ -- бесконечно малые (или бесконечно большие), $C$ можно легко подобрать. Если $C_1$ -- бесконечно большая, а $C_2$ -- бесконечно малая, то $C$ можно взять как бесконечно большую более высокого порядка по сравнению с $\frac{C_1}{C_2}$.
+
+        % Так как $C$ всегда можно найти, то определение без конкретного $N$ оказывается эквивалентным исходному.
       \end{proof}
       \item Тот же вопрос про $o$.
       
@@ -123,29 +145,45 @@
       Определения будут эквивалентными.
     \end{enumerate}
 
-  \item
+  \item[5.]
     Продолжим отношение ``$\preceq$'' на функциях до отношения на классах эквивалентности по отношению эквивалентности ``$\sim$'', введённому на практике. Правда ли, что получится отношение \textit{линейного порядка} (то есть
     $\forall f, g: (f \preceq g) \lor (g \preceq f)$)?
     \begin{proof}
-      Нет, не правда. Эквивалентность $f \sim g$ означает, что функции $f$ и $g$ асимптотически имеют одинаковую скорость роста. При этом, такое поведение можно гарантировать, если одновременно выполнены два условия: $(f \preceq g)$ и $(g \preceq f)$. В математических терминах это можно записать через пересечение:
-      \begin{equation}
-        \forall f, g: (f \preceq g) \land (g \preceq f).
+      Линейный порядок означает, что какие бы функции $f, g$ мы не взяли, для них всегда выполняется следующее отношение:
+      \begin{equation} \label{eq:rel}
+        (f \preceq g) \lor (g \preceq f).
       \end{equation}
-      Если бы мы оставили объединение, то мы бы получили положительный ответ (что $f \sim g$), даже если только одно из утверждений ($(f \preceq g)$ или $(g \preceq f)$) было бы верным, ну а это неправда.
+      Вспомним, какие отношения у нас есть:
+      \begin{equation}
+        \O, \quad o, \quad \Theta, \quad \Omega, \quad \omega.
+      \end{equation}
+      Можно понять, что такое (\ref{eq:rel}) отношение покрывает все возможные случаи:
+      \begin{itemize}
+        \item Если $f = \O(g)$, то выполняется $(f \preceq g)$.
+        \item Если $f = o(g)$, то выполняется $(f \preceq g)$.
+        \item Если $f = \Theta(g)$, то выполняется $(f \preceq g) \land (g \preceq f)$.
+        \item Если $f = \Omega(g)$, то выполняется $(g \preceq f)$.
+        \item Если $f = \omega(g)$, то выполняется $(g \preceq f)$.
+      \end{itemize}
+      % Нет, не правда. Эквивалентность $f \sim g$ означает, что функции $f$ и $g$ асимптотически имеют одинаковую скорость роста. При этом, такое поведение можно гарантировать, если одновременно выполнены два условия: $(f \preceq g)$ и $(g \preceq f)$. В математических терминах это можно записать через пересечение:
+      % \begin{equation}
+      %   \forall f, g: (f \preceq g) \land (g \preceq f).
+      % \end{equation}
+      % Если бы мы оставили объединение, то мы бы получили положительный ответ (что $f \sim g$), даже если только одно из утверждений ($(f \preceq g)$ или $(g \preceq f)$) было бы верным, ну а это неправда.
       
-      Пример:
-      \begin{equation}
-        f(n) = 1, \quad \text{а} \quad g(n) = n.
-      \end{equation}
-      Видно, что следующее утверждение верно:
-      \begin{equation}
-        (1 \preceq n) \lor (n \preceq 1),
-      \end{equation}
-      но утверждение
-      \begin{equation}
-        1 \sim n
-      \end{equation}
-      неверное.
+      % Пример:
+      % \begin{equation}
+      %   f(n) = 1, \quad \text{а} \quad g(n) = n.
+      % \end{equation}
+      % Видно, что следующее утверждение верно:
+      % \begin{equation}
+      %   (1 \preceq n) \lor (n \preceq 1),
+      % \end{equation}
+      % но утверждение
+      % \begin{equation}
+      %   1 \sim n
+      % \end{equation}
+      % неверное.
     \end{proof}
 
   \item
