fix: add thoughts to 2

--- a/hw1.tex
+++ b/hw1.tex
@@ -8,7 +8,6 @@
 	\end{itemize}
 
   \begin{proof}
-    \textit{В одну сторону}:
 
     Из $f = \Theta(g)$ не следует, что $\exists C,  0 < C < \infty : \lim\limits_{n \to \infty} \frac{f(n)}{g(n)} = C$.
     Например, пусть $f(n)$ и $g(n)$ -- некоторые положительные функции. Возьмем
@@ -97,13 +96,7 @@
         \textit{В другую сторону}:
         Если мы подобрали такую константу $C_0'$, что неравенство $f(n) \leq C_0' \cdot g(n)$ будет выполняться для всех $n \in \N$, то из этого следует, что мы можем подобрать такую константу $C_0$ (например, равную $C_0'$) и $N_0$, что неравенство $f(n) \leq C_0 \cdot g(n)$ будет выполняться с некоторого $n \geq N_0$.
 
-        Теперь рассмотрим случай, когда $f, g: \N \to \mathbb{R}_{>0}$. Здесь нужно понимать, что значения функций могут уходить в 0, поэтому производить деление как в~(\ref{eq:c0'}) опасно. Но опять же, \textit{в одну сторону}: если мы в первом случае подобрали такие константы $C_0$ и $N_0$, что, начиная с некоторого $n \geq N_0$ неравенство $f(n) \leq C_0 \cdot g(n)$ будет выполняться, то это никак не противоречит тому, что мы можем подобрать такую константу $C_0'$, что неравенство $f(n) \leq C_0' \cdot g(n)$ будет выполняться для всех $n \in \N$. Как это можно сделать:
-        \begin{itemize}
-          \item $f(n), g(n)$ -- бесконечно малые
-          \item $f(n)$ -- бесконечно малая, $g(n)$ бесконечно большая, берем $0 < C < + \infty$ 
-          \item $f(n)$ -- бесконечно большая, $g(n)$ бесконечно малая, берем $C$
-          \item $f(n), g(n)$ -- бесконечно большие
-        \end{itemize}
+        Теперь рассмотрим случай, когда $f, g: \N \to \mathbb{R}_{>0}$. Здесь нужно понимать, что значения функций могут уходить в 0, поэтому производить деление как в~(\ref{eq:c0'}) опасно. Но опять же, \textit{в одну сторону}: если мы в первом случае подобрали такие константы $C_0$ и $N_0$, что, начиная с некоторого $n \geq N_0$ неравенство $f(n) \leq C_0 \cdot g(n)$ будет выполняться, то это никак не противоречит тому, что мы можем подобрать такую константу $C_0'$, что неравенство $f(n) \leq C_0' \cdot g(n)$ будет выполняться для всех $n \in \N$ при всех комбинациях бесконечно малости и бесконечно большести функций $f(n), g(n)$. \textit{В другую сторону}: если выполнено для всех, но для всех, начинающихся с некоторого номера, тоже выполнено.
 
 
 
@@ -132,17 +125,25 @@
       \end{proof}
       \item Тот же вопрос про $o$.
       
+      Правильно выпишем определение:
       \begin{equation}
-        f(n) = o(g(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad f(n) < C \cdot g(n)
+        f(n) = o(g(n)), \quad \text{если } \quad \forall C > 0: \exists N \in \N: \forall n \geq N \quad f(n) < C \cdot g(n)
       \end{equation}
-      В случае с o, функция $f$ трактуется как бесконечно малая по отношению к функции $g$:
+      о малое означает, что в данном случае $f$ будет бесконечно малой по отношению к $g$, т.е.:
       \begin{equation}
-        \lim\limits_{n \to \infty} \frac{f(n)}{g(n)} = 0,
+        \dfrac{f(n)}{g(n)} < C.
       \end{equation}
-      то есть на бесконечности функция $g$ строго превосходит функцию $f$.
-      В данном случае неравенства будут строгими, но, делая те же самые рассуждения, которые были сделаны в пункте (a), можно понять, что $C$ тоже всегда удастся подобрать.
-      
-      Определения будут эквивалентными.
+      Ну а так как $C$ -- любое, то и оно может быть сколь угодно маленьким, и в пределе давать отношение функций, которое стремится к нулю:
+      \begin{equation}
+        \lim\limits_{n\to\infty}\dfrac{f(n)}{g(n)} \to 0.
+      \end{equation}
+      Поэтому ограничение на $n$ здесь несущественно, поэтому его можно опустить. Тогда определения будут эквивалентными.
+      % В случае с o, функция $f$ трактуется как бесконечно малая по отношению к функции $g$:
+      % \begin{equation}
+      %   \lim\limits_{n \to \infty} \frac{f(n)}{g(n)} = 0,
+      % \end{equation}
+      % то есть на бесконечности функция $g$ строго превосходит функцию $f$.
+      % В данном случае неравенства будут строгими, но, делая те же самые рассуждения, которые были сделаны в пункте (a), можно понять, что $C$ тоже всегда удастся подобрать.
     \end{enumerate}
 
   \item[5.]
@@ -157,14 +158,17 @@
       \begin{equation}
         \O, \quad o, \quad \Theta, \quad \Omega, \quad \omega.
       \end{equation}
-      Можно понять, что такое (\ref{eq:rel}) отношение покрывает все возможные случаи:
-      \begin{itemize}
-        \item Если $f = \O(g)$, то выполняется $(f \preceq g)$.
-        \item Если $f = o(g)$, то выполняется $(f \preceq g)$.
-        \item Если $f = \Theta(g)$, то выполняется $(f \preceq g) \land (g \preceq f)$.
-        \item Если $f = \Omega(g)$, то выполняется $(g \preceq f)$.
-        \item Если $f = \omega(g)$, то выполняется $(g \preceq f)$.
-      \end{itemize}
+      Рассмотрим
+      \begin{equation}
+        \begin{cases}
+          f(n) = 2+(-1)^n\cdot n, \\
+          g(n) = \log(n).
+        \end{cases}
+      \end{equation}
+      О большое:
+      \begin{equation}
+        f(n) = \O(g(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad f(n) \leq C \cdot g(n)
+      \end{equation}
       % Нет, не правда. Эквивалентность $f \sim g$ означает, что функции $f$ и $g$ асимптотически имеют одинаковую скорость роста. При этом, такое поведение можно гарантировать, если одновременно выполнены два условия: $(f \preceq g)$ и $(g \preceq f)$. В математических терминах это можно записать через пересечение:
       % \begin{equation}
       %   \forall f, g: (f \preceq g) \land (g \preceq f).
@@ -235,6 +239,9 @@
       \end{proof}
       \item $f(n) = \O(g(n)) \Leftrightarrow f(n) = o(g(n)) \lor f(n) = \Theta(g(n))$
       \begin{proof}
+        \begin{eqnarray}
+          \lim\limits_{n \to \infty}{\dfrac{\sqrt{n}}{n^{\sin n}}} = ?,
+        \end{eqnarray}
         Выпишем определения:
         \begin{eqnarray}
           f(n) = \O(g(n)), \quad \text{если } \quad \exists C > 0, N \in \N: \forall n \geq N \quad f(n) \leq C \cdot g(n), \\
